--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
+    "@nuxtjs/vuetify": "^1.9.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0"
+    "node-sass": "^4.13.0",
+    "nuxt": "^2.4.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
