--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/vuetify": "^1.9.0",
     "cross-env": "^5.2.0",
+    "firebase-tools": "^7.14.0",
     "node-sass": "^4.13.0",
     "nuxt": "^2.4.0",
     "sass-loader": "^8.0.0",
