--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "firebase deploy"
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.20",
