--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "style-loader": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
+    "nodemon": "^1.18.9",
+    "prettier": "^2.0.4"
   }
 }
