--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "style-loader": "^1.0.0"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "^0.6.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
