--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "deploy": "firebase deploy",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "format": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.20",
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.6",
-    "babel-eslint": "^10.1.0",
+    "@nuxtjs/eslint-config-typescript": "^2.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-loader": "^4.0.0",
