--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node-sass": "^4.13.0",
     "nuxt": "^2.4.0",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0"
+    "style-loader": "^1.0.0",
+    "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.6",
